<resources>
    <!-- Main Activity -->
    <string name="app_name">Contact Lens Wear Tracker</string>
    <string name="main_days_worn">Current Days Worn</string>
    <string name="main_minus_button_description">Minus</string>
    <string name="main_plus_button_description">Plus</string>
    <string name="main_reset_button_description">Reset</string>
    <string name="main_last_five_wear">Last Five Wear Times</string>
    <string name="main_last_five_newest">Newest</string>
    <string name="main_last_five_oldest">Oldest</string>
    <string name="main_average_wear">Average Wear Time:</string>
    <string name="main_lens_counter_placeholder">0</string>
    <string name="main_error_calculating_last_five">There was an error calculating your Last Five
        Wear Times. Please try again.</string>
    <string name="main_wear_status">Wear Status:</string>
    <string name="main_last_worn_date">Last Worn:</string>
    <string name="main_last_worn_actual_date_placeholder">01-01-2022</string>
    <string name="main_last_worn_actual_date_no_data">No Data Yet</string>
    <string name="main_number_format_exception_error_toast">Sorry! An error has occurred and your counter
        may reset to zero.\n \#MaximumEffort!</string>

    <!-- Overflow Menu Main Activity -->
    <string name="action_prescription">Prescription</string>
    <string name="action_credits">Credits</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="menu_options_default_case">Whoops! It Appears The App Made A Mistake.\n
        Please Try Again.\n \#MaximumEffort!</string>

    <!-- Edit Last Worn Date Activity -->
    <string name="edit_last_worn_date_instructions">If you need to change the Last Worn date for
        any reason, simply fill in the fields below with the desired information then click the
        \"Submit\" button.  Your changes will be automatically saved and you will be taken back to the
        main page where you will see the Last Worn date updated to your desired date.\n\nYou must
        enter two digits for the Month, two digits for the Day and four digits for the Year.</string>
    <string name="edit_last_worn_date_month_title">Month</string>
    <string name="edit_last_worn_date_month_hint">01</string>
    <string name="edit_last_worn_date_day_title">Day</string>
    <string name="edit_last_worn_date_day_hint">30</string>
    <string name="edit_last_worn_date_year_title">Year</string>
    <string name="edit_last_worn_date_year_hint">2024</string>
    <string name="edit_last_worn_date_submit_button">Submit</string>
    <string name="edit_last_worn_date_toast_wrong_month_length">Please check the length of the Month, 2
        digits are required. See instructions above for more details.</string>
    <string name="edit_last_worn_date_toast_wrong_day_length">Please check the length of the Day, 2
        digits are required. See instructions above for more details.</string>
    <string name="edit_last_worn_date_toast_wrong_year_length">Please check the length of the Year, 4
        digits are required. See instructions above for more details.</string>
    <string name="edit_last_worn_date_toast_successfully_saved">Your new date has been successfully saved!</string>

    <!-- Credits Activity -->
    <string name="credits_logo_image_content_description">Biddlecom Studios Logo</string>
    <string name="credits_app_info">Biddlecom Studios \nContact Lens Wear Tracker \nVersion 1.7</string>
    <string name="credits_contact_heading">Contact:</string>
    <string name="credits_contact_email_address">daniel.biddlecom@gmail.com</string>
    <string name="credits_contact_email_subject">Contact Lens Wear Tracker</string>
    <string name="credits_no_email_app_on_device">There Are No Email Apps On This Device.
        \nPlease Install An Email App On This Device.</string>
    <string name="credits_credit_heading">Credits:</string>
    <string name="credits_credit_body">Google @Google:\nPlus ( + ) icon\nMinus ( - ) icon\n
        Refresh icon\n\nDaniel Biddlecom:\nContact Lens Wear Tracker logo</string>

    <!-- Privacy Policy -->
    <string name="privacy_policy_url">https://danielbiddlecom.wixsite.com/biddlecomstudios/contact-lens-wear-tracker-privacy-policy</string>
    <string name="privacy_policy_problem_opening_webpage">Sorry. It Appears The Website Could Not Load.
        Please Check Your Internet Connection And Try Again.\n \#Maximum Effort!</string>

    <!-- Prescription -->
    <string name="prescription_contacts_rx_title">Contacts Prescription</string>
    <string name="prescription_glasses_rx_title">Glasses Prescription</string>
    <string name="prescription_left_eye_title">Left Eye (OS)</string>
    <string name="prescription_right_eye_title">Right Eye (OD)</string>
    <string name="prescription_sphere_title">Sphere:</string>
    <string name="prescription_sphere_hint">Ex: -4.00</string>
    <string name="prescription_cylinder_title">Cylinder:</string>
    <string name="prescription_cylinder_hint">Ex: -0.50</string>
    <string name="prescription_axis_title">Axis:</string>
    <string name="prescription_axis_hint">Ex: 180</string>
    <string name="prescription_prism_title">Prism:</string>
    <string name="prescription_prism_hint">Ex: 0.5</string>
    <string name="prescription_base_title">Base:</string>
    <string name="prescription_base_hint">Ex: Up/Down</string>
    <string name="prescription_power_title">Power:</string>
    <string name="prescription_power_hint">Ex: -3.00</string>
    <string name="prescription_bc_title">BC:</string>
    <string name="prescription_bc_hint">Ex: 8.8</string>
    <string name="prescription_dia_title">DIA:</string>
    <string name="prescription_dia_hint">Ex: 14.0</string>
    <string name="prescription_brand_title">Brand:</string>
    <string name="prescription_brand_hint">Ex: Acuvue</string>
    <string name="prescription_save_contact_button">Save Contact RX</string>
    <string name="prescription_save_glasses_button">Save Glasses RX</string>
    <string name="prescription_empty_text_view_dash">-</string>
    <string name="prescription_contact_lens_rx_saved">You Have Successfully Saved Your Contact
        Prescription!</string>
    <string name="prescription_glasses_rx_saved">You Have Successfully Saved Your Glasses
        Prescription!</string>
</resources>