<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="104dp" />

    <TextView
        android:id="@+id/prescription_left_eye_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prescription_left_eye_title"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/prescription_glasses_rx" />


    <TextView
        android:id="@+id/prescription_right_eye_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prescription_right_eye_title"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/prescription_glasses_rx" />

    <TextView
        android:id="@+id/prescription_glasses_rx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/prescription_glasses_rx_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prescription_glasses_sphere_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prescription_sphere_title"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/prescription_left_eye_title" />

    <TextView
        android:id="@+id/prescription_glasses_cylinder_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prescription_cylinder_title"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/prescription_glasses_sphere_title" />

    <TextView
        android:id="@+id/prescription_glasses_axis_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prescription_axis_title"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/prescription_glasses_cylinder_title" />

    <TextView
        android:id="@+id/prescription_glasses_prism_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prescription_prism_title"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/prescription_glasses_axis_title" />

    <TextView
        android:id="@+id/prescription_glasses_base_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prescription_base_title"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/prescription_glasses_prism_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

</androidx.constraintlayout.widget.ConstraintLayout>