<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/main_current_days_worn_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_days_worn"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_wear_status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_wear_status_margin_top"
            android:text="@string/main_wear_status"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_current_days_worn_tv" />

        <TextView
            android:id="@+id/main_wear_status_color_tv"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/main_wear_status_color_margin_start"
            app:layout_constraintBottom_toBottomOf="@+id/main_wear_status_tv"
            app:layout_constraintStart_toEndOf="@+id/main_wear_status_tv"
            app:layout_constraintTop_toTopOf="@+id/main_wear_status_tv" />

        <TextView
            android:id="@+id/main_lens_counter_tv"
            android:layout_width="@dimen/main_lens_counter_width_height"
            android:layout_height="@dimen/main_lens_counter_width_height"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/main_lens_counter_placeholder"
            android:textColor="@color/black"
            android:textSize="@dimen/main_lens_counter_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_wear_status_tv" />

        <ImageButton
            android:id="@+id/main_minus_button"
            android:layout_width="@dimen/main_lens_counter_buttons_width_height"
            android:layout_height="@dimen/main_lens_counter_buttons_width_height"
            android:layout_marginEnd="@dimen/main_minus_button_margin_end"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/main_minus_button_description"
            android:src="@drawable/minus_circle_outline_black_48dp"
            app:layout_constraintBottom_toBottomOf="@+id/main_lens_counter_tv"
            app:layout_constraintEnd_toStartOf="@+id/main_lens_counter_tv"
            app:layout_constraintTop_toTopOf="@id/main_lens_counter_tv" />

        <ImageButton
            android:id="@+id/main_plus_button"
            android:layout_width="@dimen/main_lens_counter_buttons_width_height"
            android:layout_height="@dimen/main_lens_counter_buttons_width_height"
            android:layout_marginStart="@dimen/main_plus_button_margin_start"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/main_plus_button_description"
            android:src="@drawable/plus_circle_outline_black_48dp"
            app:layout_constraintBottom_toBottomOf="@+id/main_lens_counter_tv"
            app:layout_constraintStart_toEndOf="@+id/main_lens_counter_tv"
            app:layout_constraintTop_toTopOf="@id/main_lens_counter_tv" />

        <ImageButton
            android:id="@+id/main_reset_button"
            android:layout_width="@dimen/main_lens_counter_buttons_width_height"
            android:layout_height="@dimen/main_lens_counter_buttons_width_height"
            android:layout_marginTop="@dimen/main_reset_button_margin_top"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/main_reset_button_description"
            android:src="@drawable/reset_black_48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_lens_counter_tv" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray_50_300"
            app:layout_constraintBottom_toTopOf="@+id/main_last_five_wear_times_tv"
            app:layout_constraintTop_toBottomOf="@+id/main_reset_button" />

        <TextView
            android:id="@+id/main_last_five_wear_times_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_last_five_wear_times_tv_margin_top"
            android:text="@string/main_last_five_wear"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_reset_button" />

        <TextView
            android:id="@+id/main_last_five_newest_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_last_five_newest_tv_margin_start"
            android:layout_marginTop="@dimen/main_last_five_newest_tv_margin_top"
            android:text="@string/main_last_five_newest"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_last_five_wear_times_tv" />

        <TextView
            android:id="@+id/main_last_five_oldest_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/main_last_five_oldest_tv_margin_end"
            android:text="@string/main_last_five_oldest"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/main_last_five_newest_tv" />

        <LinearLayout
            android:id="@+id/main_linear_layout_last_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/linear_layout_margin_top"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_last_five_newest_tv">

            <TextView
                android:id="@+id/main_last_five_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_lens_counter_placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/main_last_five_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_lens_counter_placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/main_last_five_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_lens_counter_placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/main_last_five_four"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_lens_counter_placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/main_last_five_five"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_lens_counter_placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <TextView
            android:id="@+id/average_wear_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/average_wear_time_tv_margin_start"
            android:layout_marginTop="@dimen/average_wear_time_tv_margin_top"
            android:layout_marginBottom="@dimen/average_wear_time_tv_margin_bottom"
            android:text="@string/main_average_wear"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_linear_layout_last_five" />

        <TextView
            android:id="@+id/average_wear_time_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/average_wear_time_number_tv_margin_start"
            android:text="@string/main_lens_counter_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/average_wear_time_tv"
            app:layout_constraintStart_toEndOf="@+id/average_wear_time_tv"
            app:layout_constraintTop_toTopOf="@+id/average_wear_time_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>